--- a/build.xml
+++ b/build.xml
@@ -3,7 +3,7 @@
 	<property name="src" location="src" />
 	<property name="build" location="build" />
 	<property name="lib" location="lib" />
-	<property name="jar" location="${release}/webremotehand.jar" />
+	<property name="jar" location="${release}/remotehand.jar" />
 	<property name="jarUIA" location="${release}/uiautomationhand.jar" />
 
 	<property name="webPackage" value="com/exactprosystems/remotehand/web/**" />
@@ -113,7 +113,7 @@
 			<manifest>
 				<attribute name="Main-Class" value="org.eclipse.jdt.internal.jarinjarloader.JarRsrcLoader" />
 				<attribute name="Class-Path" value="."/>
-				<attribute name="Rsrc-Main-Class" value="com.exactprosystems.remotehand.web.WebRhStarter"/>
+				<attribute name="Rsrc-Main-Class" value="com.exactprosystems.remotehand.uiautomation.UIAStarter"/>
 				<attribute name="Rsrc-Class-Path" value="./
 						lib/commons-cli-1.2.jar
 						lib/log4j-1.2.16.jar
