--- a/build.xml
+++ b/build.xml
@@ -115,6 +115,7 @@
 				<attribute name="Class-Path" value="."/>
 				<attribute name="Rsrc-Main-Class" value="com.exactprosystems.remotehand.uiautomation.UIAStarter"/>
 				<attribute name="Rsrc-Class-Path" value="./
+						lib/commons-io-2.4.jar
 						lib/commons-cli-1.2.jar
 						lib/log4j-1.2.16.jar
 						lib/javacsv.jar" />
