--- a/config.ini
+++ b/config.ini
@@ -2,9 +2,10 @@ Port=8000
 Delimiter=,
 TextQualifier="
 SessionExpire=2
-Browser=Firefox
+Browser=Chrome
 HttpProxy=
 SslProxy=
 FtpProxy=
 SocksProxy=
 NoProxy=
+ChromeDriverPath=/tmp/chromedriver
