Feature #37583 [LCH MCCP] automatic transfer generated trade file to the box where RemoteHand runs updated cofig
svn-rev: 48999

--- a/config.ini
+++ b/config.ini
@@ -2,10 +2,10 @@ Port=8000
 Delimiter=,
 TextQualifier="
 SessionExpire=2
-Browser=Chrome
+Browser=Firefox
 HttpProxy=
 SslProxy=
 FtpProxy=
 SocksProxy=
 NoProxy=
-ChromeDriverPath=/tmp/chromedriver
+DefaultFileStorage=generated/
