--- a/build.xml
+++ b/build.xml
@@ -58,9 +58,10 @@
 						lib/commons-lang3-3.4.jar
 						lib/log4j-1.2.16.jar
 						lib/javacsv.jar
-						lib/jaxb-api-2.2.jar
-						lib/jaxb-impl-2.1.12.jar
-						lib/clearth_core_rh_xml.jar" />
+						lib/jackson-core-2.4.2.jar
+						lib/jackson-annotations-2.4.0.jar
+						lib/jackson-databind-2.4.2.jar
+						lib/clearth_core_rh_data.jar" />
 				<attribute name="Implementation-Title" value="RemoteHand" />
 				<attribute name="Implementation-Vendor" value="Exactpro Systems" />
 				<attribute name="Implementation-Vendor-Id" value="com.exactprosystems" />
