--- a/config.ini
+++ b/config.ini
@@ -1,8 +1,9 @@
-Port=8000
+Port=8008
 Delimiter=,
 TextQualifier="
 SessionExpire=2
-Browser=Firefox
+Browser=Chrome
+ChromeDriverPath=chromedriver
 HttpProxy=
 SslProxy=
 FtpProxy=
