Feature #41803 : [LCH MCCP] Please create configupdater tool for the tables.xml file Applied new RH Data Module (871ddfc36ccd9f769e66d1ede55576cfcee852dd) with new form field type for comboboxExt (Combobox with buttons)
svn-rev: 51651

--- a/formParser.properties
+++ b/formParser.properties
@@ -9,6 +9,10 @@ refdata.dropdown.xpath=.//div[@role='combobox']
 refdata.dropdown.is.required.xpath=./self::*[contains(@class, 'required')]
 refdata.dropdown.is.disabled.xpath=./self::*[contains(@class, 'readonly')]
 
+refdata.dropdown_ext.xpath=.//*[@id='NavigateToInst']/preceding-sibling::div[@role='combobox']
+refdata.dropdown_ext.is.required.xpath=./self::*[contains(@class, 'required')]
+refdata.dropdown_ext.is.disabled.xpath=./self::*[contains(@class, 'readonly')]
+
 refdata.date.xpath=.//div[contains(@class, 'dateField')]/parent::div[contains(@class, 'dateTimePicker')]/parent::*
 refdata.date.is.required.xpath=./self::*[contains(@class, 'required')]
 refdata.date.is.disabled.xpath=''
