Developer note: small fix for user convenience.
svn-rev: 53101

--- a/config.ini
+++ b/config.ini
@@ -3,7 +3,7 @@ Delimiter=,
 TextQualifier="
 SessionExpire=2
 Browser=Chrome
-ChromeDriverPath=chromedriver
+ChromeDriverPath=chromedriver.exe
 HttpProxy=
 SslProxy=
 FtpProxy=
