Task #44844 Export from GUI + XLS comparison
svn-rev: 54360

--- a/config.ini
+++ b/config.ini
@@ -3,7 +3,7 @@ Delimiter=,
 TextQualifier="
 SessionExpire=2
 Browser=Chrome
-ChromeDriverPath=chromedriver.exe
+ChromeDriverPath=chromedriver
 HttpProxy=
 SslProxy=
 FtpProxy=
