Feature #46849: [RemoteHand] Default value of locator in the scripts
svn-rev: 55841

--- a/config.ini
+++ b/config.ini
@@ -1,7 +1,7 @@
 Port=8008
 Delimiter=,
 TextQualifier="
-SessionExpire=2
+SessionExpire=10
 Browser=Chrome
 ChromeDriverPath=chromedriver.exe
 HttpProxy=
@@ -10,3 +10,4 @@ FtpProxy=
 SocksProxy=
 NoProxy=
 DefaultFileStorage=generated/
+DefaultLocator=xpath
