--- a/build.xml
+++ b/build.xml
@@ -52,16 +52,24 @@
 				<attribute name="Class-Path" value="."/>
 				<attribute name="Rsrc-Main-Class" value="com.exactprosystems.remotehand.web.WebRhStarter"/>
 				<attribute name="Rsrc-Class-Path" value="./
-						lib/commons-cli-1.2.jar
-						lib/selenium-java-3.14.0.jar
-						lib/selenium-server-standalone-3.14.0.jar
-						lib/commons-lang3-3.4.jar
-						lib/log4j-1.2.16.jar
-						lib/javacsv.jar
-						lib/jackson-core-2.4.2.jar
-						lib/jackson-annotations-2.4.0.jar
-						lib/jackson-databind-2.4.2.jar
+						lib/byte-buddy-1.8.15.jar
 						lib/clearth_core_rh_data.jar
+						lib/commons-cli-1.2.jar
+						lib/commons-exec-1.3.jar
+						lib/commons-io-2.4.jar
+						lib/commons-lang3-3.4.jar
+						lib/guava-25.0-jre.jar
+						lib/httpclient-4.5.7.jar
+						lib/httpcore-4.4.11.jar
+						lib/jackson-annotations-2.4.0.jar
+						lib/jackson-core-2.4.2.jar
+						lib/jackson-databind-2.4.2.jar
+						lib/javacsv.jar
+						lib/log4j-1.2.16.jar
+						lib/okhttp-3.11.0.jar
+						lib/okio-1.14.0.jar
+						lib/selenium-java-3.141.59.jar
+						lib/selenium-server-standalone-3.141.59.jar
 						lib/slf4j-api-1.6.4.jar
 						lib/slf4j-log4j12-1.6.4.jar"
 				/>
