--- a/build.xml
+++ b/build.xml
@@ -65,6 +65,7 @@
 						lib/jackson-core-2.4.2.jar
 						lib/jackson-databind-2.4.2.jar
 						lib/javacsv.jar
+						lib/jhlabs-image-filters.jar
 						lib/log4j-1.2.16.jar
 						lib/netty-all-4.1.33.Final.jar
 						lib/okhttp-3.11.0.jar
