--- a/build.xml
+++ b/build.xml
@@ -58,6 +58,7 @@
 						lib/commons-exec-1.3.jar
 						lib/commons-io-2.4.jar
 						lib/commons-lang3-3.4.jar
+						lib/ghostdriver-2.1.0.jar
 						lib/guava-25.0-jre.jar
 						lib/httpclient-4.5.7.jar
 						lib/httpcore-4.4.11.jar
