Feature #65666. [RemoteHand] To simplify project structure Merged branch removed-ui-automation.
svn-rev: 70115

--- a/build.xml
+++ b/build.xml
@@ -5,11 +5,9 @@
 	<property name="build" location="build" />
 	<property name="lib" location="lib" />
 	<property name="jar" location="${release}/remotehand.jar" />
-	<property name="jarUIA" location="${release}/uiautomationhand.jar" />
 
 	<property name="webPackage" value="com/exactprosystems/remotehand/web/**" />
-	<property name="uiaPackage" value="com/exactprosystems/remotehand/uiautomation/**" />
-	
+
 	<target name="CheckSvnRevision">
 		<condition property="svn.info.lastRev" value="local_build">
 			<not>
@@ -42,15 +40,14 @@
 
 
 		<echo message="Compiling sources" />
-		<javac srcdir="${src}" destdir="${build}" debug="true" includeantruntime="true" classpathref="classpath" source="1.8" target="1.8">
-			<exclude name="${uiaPackage}"/>
-		</javac>
-		
+		<javac srcdir="${src}" destdir="${build}" debug="true" includeantruntime="true" classpathref="classpath"
+			   source="1.8" target="1.8"/>
+
 		<jar basedir="${build}" destfile="${jar}">
 			<manifest>
 				<attribute name="Main-Class" value="org.eclipse.jdt.internal.jarinjarloader.JarRsrcLoader" />
 				<attribute name="Class-Path" value="."/>
-				<attribute name="Rsrc-Main-Class" value="com.exactprosystems.remotehand.web.WebRhStarter"/>
+				<attribute name="Rsrc-Main-Class" value="com.exactprosystems.remotehand.RemoteHandStarter"/>
 				<attribute name="Rsrc-Class-Path" value="./
 						lib/byte-buddy-1.8.15.jar
 						lib/clearth_core_rh_data.jar
@@ -100,56 +97,4 @@
 		<delete dir="${build}" />		
 		<delete dir="${release.project}" />
 	</target>
-
-
-	<target name="UIAHRelease" depends="CheckSvnRevision">
-		<delete dir="${build}" />
-		<mkdir dir="${build}" />
-
-		<delete dir="${release}" />
-		<mkdir dir="${release}" />
-
-		<path id="classpath">
-			<fileset dir="${lib}">
-				<patternset>
-					<include name="**/*" />
-				</patternset>
-			</fileset>
-
-			<pathelement location="${build}" />
-		</path>
-
-
-		<echo message="Compiling sources" />
-		<javac srcdir="${src}" destdir="${build}" debug="true" includeantruntime="true" classpathref="classpath">
-			<exclude name="${webPackage}"/>
-		</javac>
-
-		<jar basedir="${build}" destfile="${jarUIA}">
-			<manifest>
-				<attribute name="Main-Class" value="org.eclipse.jdt.internal.jarinjarloader.JarRsrcLoader" />
-				<attribute name="Class-Path" value="."/>
-				<attribute name="Rsrc-Main-Class" value="com.exactprosystems.remotehand.uiautomation.UIAStarter"/>
-				<attribute name="Rsrc-Class-Path" value="./
-						lib/commons-io-2.4.jar
-						lib/commons-cli-1.2.jar
-						lib/commons-lang3-3.4.jar
-						lib/log4j-1.2.16.jar
-						lib/javacsv.jar" />
-				<attribute name="Implementation-Title" value="RemoteHand" />
-				<attribute name="Implementation-Vendor" value="Exactpro Systems" />
-				<attribute name="Implementation-Vendor-Id" value="com.exactprosystems" />
-				<attribute name="Implementation-Version" value="${svn.info.lastRev}" />
-			</manifest>
-			<zipfileset src="jar-in-jar-loader.zip"/>
-			<zipfileset dir="${lib}" prefix="lib/" >
-				<exclude name="selenium*" />
-			</zipfileset>
-		</jar>
-		<copy file="config.ini" todir="${release}" />
-		<copy file="log4j.properties" todir="${release}" />
-
-		<delete dir="${build}" />
-	</target>
-
 </project>
