--- a/config.ini
+++ b/config.ini
@@ -3,8 +3,8 @@ Port=8008
 Delimiter=,
 TextQualifier="
 SessionExpire=10
-Browser=Chrome
-ChromeDriverPath=chromedriver.exe
+Browser=Chrome-Headless
+ChromeDriverPath=/usr/bin/chromedriver
 HttpProxy=
 SslProxy=
 FtpProxy=
