TH2-622 [TH2-Hand][Windows] Performance improvements Added 2 new actions. Added logging for win app driver Other improvements and fixes windows mode

--- a/log4j.properties
+++ b/log4j.properties
@@ -28,3 +28,12 @@ log4j.appender.ERRFILE.MaxFileSize=100MB
 log4j.appender.ERRFILE.MaxBackupIndex=3
 log4j.appender.ERRFILE.layout=org.apache.log4j.PatternLayout
 log4j.appender.ERRFILE.layout.ConversionPattern=%p %t %d{dd MMM yyyy HH:mm:ss,SSS} %c - %m%n
+
+log4j.logger.com.exactprosystems.remotehand.windows.WindowsLoggingDriver=DEBUG,WINDRIVERLOGGER
+log4j.additivity.com.exactprosystems.remotehand.windows.WindowsLoggingDriver=FALSE
+log4j.appender.WINDRIVERLOGGER=org.apache.log4j.RollingFileAppender
+log4j.appender.WINDRIVERLOGGER.File=logs/win_driver.log
+log4j.appender.WINDRIVERLOGGER.MaxFileSize=100MB
+log4j.appender.WINDRIVERLOGGER.MaxBackupIndex=3
+log4j.appender.WINDRIVERLOGGER.layout=org.apache.log4j.PatternLayout
+log4j.appender.WINDRIVERLOGGER.layout.ConversionPattern=%p %t %d{dd MMM yyyy HH:mm:ss,SSS} %c - %m%n
