Feature #71358. [RemoteHand] To publish RemoteHand on Github rhData dependency removed.

--- a/gradle.properties
+++ b/gradle.properties
@@ -1,19 +1,10 @@
-###############################################################################
-# Copyright (c) 2009-2020, Exactpro Systems LLC
-# www.exactpro.com
-# Build Software to Test Software
-#
-# All rights reserved.
-# This is unpublished, licensed software, confidential and proprietary 
-# information which is the property of Exactpro Systems LLC or its licensors.
-################################################################################
+release_version = 0.0.0
 
-#TODO: Gets from git local repository by tag
-version_major = 1
-#TODO: Gets from git local repository by tag
-version_minor = 1
-#TODO: Gets from git local repository
-version_maintenance = 0
-version_build = 0
-docke_image_name = remotehand
-target_docker_repository = target_docker_repository
+artifactory_url=
+artifactory_deploy_repo_key=
+artifactory_user=
+artifactory_password=
+
+nexus_url=
+nexus_user=
+nexus_password=
