added workflow and updated build config

--- a/build.gradle
+++ b/build.gradle
@@ -2,7 +2,7 @@ plugins {
     id "java"
     id 'java-library'
     id 'application'
-    id "com.jfrog.artifactory" version '4.15.1'
+    id "com.jfrog.bintray" version '1.8.5'
 }
 
 apply plugin: "maven-publish"
@@ -25,12 +25,8 @@ application {
 
 repositories {
     maven {
-        name 'Artifactory'
-        url 'http://arti.exactpro.com/libs-release'
-    }
-    maven {
-        name 'Artifactory snapshot'
-        url 'http://artifactory5.exp.exactpro.com/artifactory/libs-snapshot'
+        name 'Bintray'
+        url 'https://dl.bintray.com/exactpro/th2'
     }
 }
 
@@ -87,6 +83,17 @@ publishing {
         mavenJava(MavenPublication) {
             from components.java
         }
+        bintrayPublication(MavenPublication) {
+            from components.java
+            groupId group
+            artifactId rootProject.name
+            version project.version
+            pom.withXml {
+                def root = asNode()
+                root.appendNode('name', rootProject.name)
+                root.appendNode('url', project.vcs_url)
+            }
+        }
     }
 
     repositories {
@@ -95,38 +102,25 @@ publishing {
             url = sharedDir
         }
     }
-
-    repositories {
-        maven {
-            name = 'nexusRepository'
-            credentials {
-                username = "${nexus_user}"
-                password = "${nexus_password}"
-            }
-            url = "${nexus_url}"
-        }
-    }
 }
 
-artifactory {
-    publish {
-        contextUrl = "${artifactory_url}"
-        repository {
-            repoKey = "${artifactory_deploy_repo_key}" // The Artifactory repository key to publish to
-            username = "${artifactory_user}" // The publisher user name
-            password = "${artifactory_password}" // The publisher password
-        }
-        defaults {
-            // Reference to Gradle publications defined in the build script.
-            // This is how we tell the Artifactory Plugin which artifacts should be
-            // published to Artifactory.
-            publications('mavenJava')
-            publishArtifacts = true
-            publishBuildInfo = true
-            // Properties to be attached to the published artifacts.
-            publishPom = true
+bintray {
+    user = "${bintray_user}"
+    key = "${bintray_key}"
+    publications = ['bintrayPublication']
+    pkg {
+        repo = 'th2'
+        name = rootProject.name
+        userOrg = 'exactpro'
+        licenses = ['Apache-2.0']
+        vcsUrl = project.vcs_url
+        version {
+            name = project.version
+            desc = project.version
+            released  = new Date()
         }
     }
+    publish = true
 }
 
 wrapper {
