--- a/gradle.properties
+++ b/gradle.properties
@@ -1,10 +1,3 @@
-release_version = 0.0.0
+release_version = 1.0.4
 
-artifactory_url=
-artifactory_deploy_repo_key=
-artifactory_user=
-artifactory_password=
-
-nexus_url=
-nexus_user=
-nexus_password=
+vcs_url=https://github.com/th2-net/remotehand
