--- a/config.ini
+++ b/config.ini
@@ -12,3 +12,6 @@ SocksProxy=
 NoProxy=
 DefaultFileStorage=generated/
 DefaultLocator=xpath
+WebpLibPath=libwebp.so
+WebpQualityFactor=100
+WebpLosslessCompression=false
