--- a/gradle.properties
+++ b/gradle.properties
@@ -1,5 +1,4 @@
-release_version = 1.4.11
+release_version = 1.4.12
+description = 'RemoteHand'
 
 vcs_url=https://github.com/th2-net/remotehand
-bintray_user=
-bintray_key=
