--- a/build.gradle
+++ b/build.gradle
@@ -1,13 +1,15 @@
 plugins {
     id "java"
-    id 'java-library'
+    // id 'java-library'
     id 'application'
-    id "com.jfrog.bintray" version '1.8.5'
+    id 'maven-publish'
+    id "io.github.gradle-nexus.publish-plugin" version "1.0.0"
+    id 'signing'
 }
 
-apply plugin: "maven-publish"
+// apply plugin: "maven-publish"
 
-group = 'com.exactprosystems.remotehand'
+group = 'com.exactpro.remotehand'
 version = release_version
 
 java {
@@ -20,7 +22,7 @@ ext {
 }
 
 application {
-    mainClassName = "com.exactprosystems.remotehand.RemoteHandStarter"
+    mainClassName = "com.exactpro.remotehand.RemoteHandStarter"
 }
 
 repositories {
@@ -28,6 +30,19 @@ repositories {
     maven {
         name 'Bintray'
         url 'https://dl.bintray.com/exactpro/th2'
+    }
+    maven {
+            name 'Sonatype_snapshots'
+            url 'https://s01.oss.sonatype.org/content/repositories/snapshots/'
+    }
+    maven {
+            name 'Sonatype_releases'
+            url 'https://s01.oss.sonatype.org/content/repositories/releases/'
+    }
+
+    configurations.all {
+        resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
+        resolutionStrategy.cacheDynamicVersionsFor 0, 'seconds'
     }
 }
 
@@ -66,65 +81,120 @@ jar {
     }
 }
 
-task releaseZip (type: Zip, dependsOn: [jar, configurations.runtimeClasspath]) {
-    archiveAppendix = new Date().format('yyyyMMdd')
-    archiveVersion = release_version
-    from jar
-    from ("${projectDir}") {
-        include "config.ini"
-        include "log4j.properties"
-        include "README.md"
-    }
-    into ("lib/") {
-        from configurations.runtimeClasspath.findAll { it.name.endsWith('jar') }.collect { it }
+// task releaseZip (type: Zip, dependsOn: [jar, configurations.runtimeClasspath]) {
+//     archiveAppendix = new Date().format('yyyyMMdd')
+//     archiveVersion = release_version
+//     from jar
+//     from ("${projectDir}") {
+//         include "config.ini"
+//         include "log4j.properties"
+//         include "README.md"
+//     }
+//     into ("lib/") {
+//         from configurations.runtimeClasspath.findAll { it.name.endsWith('jar') }.collect { it }
+//     }
+// }
+
+java {
+    withJavadocJar()
+    withSourcesJar()
+}
+// conditionals for publications
+tasks.withType(PublishToMavenRepository) {
+    onlyIf {
+        (repository == publishing.repositories.nexusRepository &&
+            project.hasProperty('nexus_user') &&
+            project.hasProperty('nexus_password') &&
+            project.hasProperty('nexus_url')) ||
+        (repository == publishing.repositories.sonatype &&
+            project.hasProperty('sonatypeUsername') &&
+            project.hasProperty('sonatypePassword')) ||
+        (repository == publishing.repositories.localRepo)
     }
 }
+tasks.withType(Sign) {
+    onlyIf { project.hasProperty('signingKey') &&
+        project.hasProperty('signingPassword')
+    }
+}
+// disable running task 'initializeSonatypeStagingRepository' on a gitlab
+tasks.whenTaskAdded {task ->
+    if(task.name.equals('initializeSonatypeStagingRepository') &&
+        !(project.hasProperty('sonatypeUsername') && project.hasProperty('sonatypePassword'))
+    ) {
+        task.enabled = false
+    }
+}
+
 
 publishing {
     publications {
         mavenJava(MavenPublication) {
-            from components.java
-        }
-        bintrayPublication(MavenPublication) {
-            from components.java
-            groupId group
-            artifactId rootProject.name
-            version project.version
-            pom.withXml {
-                def root = asNode()
-                root.appendNode('name', rootProject.name)
-                root.appendNode('url', project.vcs_url)
+            from(components.java)
+            pom {
+              name = rootProject.name
+              packaging = 'jar'
+              description = rootProject.description
+              url = vcs_url
+              scm {
+                url = vcs_url
+              }
+              licenses {
+                license {
+                  name = 'The Apache License, Version 2.0'
+                  url = 'http://www.apache.org/licenses/LICENSE-2.0.txt'
+                }
+              }
+              developers {
+                developer {
+                  id = 'developer'
+                  name = 'developer'
+                  email = 'developer@exactpro.com'
+                }
+              }
+              scm {
+                url = vcs_url
+              }
             }
         }
     }
-
     repositories {
         maven {
             name = 'localRepo'
             url = sharedDir
         }
-    }
-}
-
-bintray {
-    user = "${bintray_user}"
-    key = "${bintray_key}"
-    publications = ['bintrayPublication']
-    pkg {
-        repo = 'th2'
-        name = rootProject.name
-        userOrg = 'exactpro'
-        licenses = ['Apache-2.0']
-        vcsUrl = project.vcs_url
-        version {
-            name = project.version
-            desc = project.version
-            released  = new Date()
+//Nexus repo to publish from gitlab
+        maven {
+            name = 'nexusRepository'
+            credentials {
+                username = project.findProperty('nexus_user')
+                password = project.findProperty('nexus_password')
+            }
+            url = project.findProperty('nexus_url')
         }
     }
-    publish = true
 }
 
-wrapper {
-    gradleVersion = '5.5'
+nexusPublishing {
+    repositories {
+        sonatype {
+            nexusUrl.set(uri("https://s01.oss.sonatype.org/service/local/"))
+            snapshotRepositoryUrl.set(uri("https://s01.oss.sonatype.org/content/repositories/snapshots/"))
+        }
+    }
 }
+
+signing {
+    def signingKey = findProperty("signingKey")
+    def signingPassword = findProperty("signingPassword")
+    useInMemoryPgpKeys(signingKey, signingPassword)
+    sign publishing.publications.mavenJava
+}
+
+clean {
+    delete sharedDir
+}
+
+// wrapper {
+//     gradleVersion = '5.5'
+// }
