--- a/build.gradle
+++ b/build.gradle
@@ -2,6 +2,7 @@ plugins {
     id "java"
     id 'application'
     id 'maven-publish'
+    id "org.jetbrains.kotlin.jvm" version "${kotlin_version}"
     id "io.github.gradle-nexus.publish-plugin" version "1.0.0"
     id 'signing'
 }
@@ -14,6 +15,13 @@ java {
     targetCompatibility = JavaVersion.VERSION_1_8
     withJavadocJar()
     withSourcesJar()
+}
+
+test {
+    useJUnitPlatform()
+    testLogging {
+        showStandardStreams = true
+    }
 }
 
 ext {
@@ -59,6 +67,9 @@ dependencies {
     compile 'io.appium:java-client:7.3.0'
     compile "org.mvel:mvel2:2.4.7.Final"
     compile 'net.java.dev.jna:jna:5.7.0'
+
+    testImplementation "org.junit.jupiter:junit-jupiter:5.8.2"
+    testImplementation "org.jetbrains.kotlin:kotlin-test-junit:${kotlin_version}"
 }
 
 jar {
@@ -116,7 +127,6 @@ tasks.whenTaskAdded {task ->
         task.enabled = false
     }
 }
-
 
 publishing {
     publications {
