--- a/gradle.properties
+++ b/gradle.properties
@@ -1,4 +1,6 @@
-release_version = 1.7.1
+kotlin.code.style=official
+kotlin_version=1.5.32
+release_version = 1.7.2
 description = 'remotehand'
 
 vcs_url=https://github.com/th2-net/remotehand
