--- a/.github/workflows/dev-publish-release.yml
+++ b/.github/workflows/dev-publish-release.yml
@@ -41,7 +41,7 @@ jobs:
         with:
           java-version: '11'
       - name: Build with Gradle
-        run: ./gradlew clean distTar
+        run: ./gradlew clean releaseTar
 
       - name: Create Draft Release
         id: create_release
@@ -59,6 +59,6 @@ jobs:
           GITHUB_TOKEN: ${{ secrets.GITHUB_TOKEN }}
         with:
           upload_url: ${{ steps.create_release.outputs.upload_url }}
-          asset_path: ./build/distributions/remotehand-${{ steps.release_ver.outputs.value }}.tar
+          asset_path: ./build/distributions/remotehand-standalone-${{ steps.release_ver.outputs.value }}.tar
           asset_name: ${{ steps.meta.outputs.REPOSITORY_NAME }}.${{ steps.release_ver.outputs.value }}.tar
           asset_content_type: application/tar
