--- a/build.gradle
+++ b/build.gradle
@@ -43,7 +43,7 @@ repositories {
             url 'https://s01.oss.sonatype.org/content/repositories/releases/'
     }
 
-    configurations.all {
+    configurations.configureEach {
         resolutionStrategy.cacheChangingModulesFor 0, 'seconds'
         resolutionStrategy.cacheDynamicVersionsFor 0, 'seconds'
     }
@@ -56,7 +56,7 @@ dependencies {
     implementation 'commons-io:commons-io:2.11.0'
     implementation 'net.sourceforge.javacsv:javacsv:2.0'
     implementation 'org.apache.httpcomponents:httpclient:4.5.14'
-    implementation 'commons-cli:commons-cli:1.5.0'
+    api 'commons-cli:commons-cli:1.5.0'
     implementation 'com.jhlabs:filters:2.0.235'
     implementation 'io.netty:netty-all:4.1.87.Final'
     implementation('org.seleniumhq.selenium:selenium-server:3.141.59') {
