--- a/build.gradle
+++ b/build.gradle
@@ -52,7 +52,7 @@ repositories {
 dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
-    implementation "org.slf4j:slf4j-api"
+    implementation 'org.slf4j:slf4j-api'
     implementation 'commons-io:commons-io:2.11.0'
     implementation 'net.sourceforge.javacsv:javacsv:2.0'
     implementation 'org.apache.httpcomponents:httpclient:4.5.14'
