--- a/build.gradle
+++ b/build.gradle
@@ -3,7 +3,7 @@ plugins {
     id 'application'
     id 'maven-publish'
     id "org.jetbrains.kotlin.jvm" version "${kotlin_version}"
-    id "io.github.gradle-nexus.publish-plugin" version "1.0.0"
+    id "io.github.gradle-nexus.publish-plugin" version "1.3.0"
     id 'signing'
 }
 
@@ -52,7 +52,7 @@ repositories {
 dependencies {
     implementation 'com.fasterxml.jackson.core:jackson-databind:2.14.2'
     implementation 'org.apache.commons:commons-lang3:3.12.0'
-    implementation 'org.slf4j:slf4j-log4j12:2.0.6'
+    implementation 'org.slf4j:slf4j-api'
     implementation 'commons-io:commons-io:2.11.0'
     implementation 'net.sourceforge.javacsv:javacsv:2.0'
     implementation 'org.apache.httpcomponents:httpclient:4.5.14'
